--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "workflowapp",
+  "homepage": "https://mayank-cit.github.io/autoamate",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap3": "^3.3.5",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,6 +18,8 @@
     "validator": "^13.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
